--- a/css/index.css
+++ b/css/index.css
@@ -160,7 +160,6 @@
   #home {
       width: 100%;
       height: 100%;
-      /*background: red;*/
       position: relative;
   }
   
@@ -174,7 +173,6 @@
   #carousel li {
       width: 100%;
       height: 100%;
-      /*z-index: 1;*/
       opacity: 0;
       filter: opacity(0);
       position: absolute;
@@ -188,11 +186,9 @@
   
   #carousel .show {
       transform: translateZ(0px);
-      /*z-index: 2;*/
       opacity: 1;
       filter: opacity(100);
       transition: all 1.3s ease;
-      /*transition: all 1s ease ;*/
   }
   
   #carousel li img {
@@ -223,19 +219,19 @@
   #carousel .li2.show .h11 {
       left: 82%;
       transform: translateX(-50%) translateY(-50%);
-      animation: h11 1s ease 0.2s forwards;
+      animation: h11 1.5s ease 0.2s forwards;
   }
   
   #carousel .li2.show .h12 {
       left: 75%;
       transform: translateX(-50%) translateY(-50%);
-      animation: h12 1s ease 0.2s forwards;
+      animation: h12 1.5s ease 0.2s forwards;
   }
   
   #carousel .li2.show .h13 {
       left: 68%;
       transform: translateX(-50%) translateY(-50%);
-      animation: h13 1s ease 0.2s forwards;
+      animation: h13 1.5s ease 0.2s forwards;
   }
   
   @keyframes h11 {
@@ -244,7 +240,7 @@
           opacity: 0;
       }
       to {
-          top: 45%;
+          top: 48%;
           opacity: 1;
       }
   }
@@ -273,33 +269,150 @@
   
 
   #carousel .li1 h1, #carousel .li1 p{
-      color: rgb(255, 255, 255);
-      font-weight: 800;
-      font-size: 30px;
-      position: absolute;
-      left: 10%;
+    line-height: 45px;
+    letter-spacing: 5px;
+    font-size: 40px;
+    color: rgb(255, 255, 255);
+    font-weight:bolder;
+    position: absolute;
+    opacity: 0;
+    text-shadow: 4px 3px 5px rgb(33, 46, 2);
+  }
+ 
+ 
+   #carousel .li1.show h1{
+     top: 35%;
+     animation: sh1 1.5s ease 0.2s forwards;
+
+   }
+  #carousel .li1.show p{
+     top: 50%;
+     animation: sp 1.5s ease 0.2s forwards;
 
   }
-   #carousel .li1 h1{
-     top: 30%;
-   }
-  #carousel .li1 p{
-     top: 40%;
-      left: 15%;
+
+
+  @keyframes sh1 {
+      from {
+          left: 0%;
+          opacity: 0;
+      }
+      to {
+          left: 15%;
+          opacity: 1;
+      }
   }
+  
+  @keyframes sp {
+      from {
+          left:45%;
+          opacity: 0;
+      }
+      to {
+          left: 30%;
+          opacity: 1;
+      }
+  }
+  
+
+
+
+
+
+
 
 
   #carousel .li3 h1{
-      color: rgb(255, 255, 255);
-      font-weight: 800;
-      font-size: 30px;
-      position: absolute;
-      left:55%;
+    line-height: 45px;
+    letter-spacing: 5px;
+    font-size: 40px;
+    color: rgb(255, 255, 255);
+    font-weight:bolder;
+    width: 50px;
+    
+    position: absolute;
+   
+    opacity: 0;
+    text-shadow: 4px 3px 5px rgb(33, 46, 2);
 
   }
-   #carousel .li3 h1{
-     top: 30%;
+   #carousel .li3.show .h31{
+     
+     animation: h31 1.5s ease 0.2s forwards;
+
    }
+  #carousel .li3.show .h32{
+     
+     animation: h32 1.5s ease 0.2s forwards;
+
+   }
+   #carousel .li3.show .h33{
+     
+     animation: h33 1.5s ease 0.2s forwards;
+
+   }
+  #carousel .li3.show .h34{
+     top: 43%;
+     left: 36%;
+     animation: h34 1.5s ease 0.2s forwards;
+
+   }
+
+
+  @keyframes h31 {
+      from {
+         top: 31%;
+          left: 14%;
+          opacity: 0;
+      }
+      to {
+          top: 26%;
+          left: 19%;
+          opacity: 1;
+      }
+  }
+  
+  @keyframes h32 {
+      from {
+          top: 38%;
+          left: 19%;
+          opacity: 0;
+      }
+      to {
+          top: 43%;
+          left: 24%;
+          opacity: 1;
+      }
+  }
+
+  @keyframes h33 {
+      from {
+          top: 25%;
+          left:36%;
+          opacity: 0;
+      }
+      to {
+          top: 26%;
+          left:31%;
+          opacity: 1;
+      }
+  }
+  
+  @keyframes h34 {
+      from {
+          top: 38%;
+          left: 41%;
+          opacity: 0;
+      }
+      to {
+          top: 43%;
+          left: 36%;
+          opacity: 1;
+      }
+  }
+
+
+
 
 
 
@@ -414,6 +527,26 @@
           opacity: 1;
           filter: opacity(1);
       }
+
+
+      /*lunbotu'2*/
+      #carousel .li1 h1, #carousel .li1 p{
+        line-height: 25px;
+        letter-spacing: 0px;
+        font-size: 20px;
+        text-shadow: 1px 1px 5px rgb(33, 46, 2);
+      }
+ /*lunbotu3*/
+    #carousel .li3 h1{
+      line-height: 25px;
+      letter-spacing: 0px;
+      font-size: 20px;
+      width: 30px;
+      text-shadow: 1px 1px 5px rgb(33, 46, 2);
+
+
+    }
+
   }
   
   @media screen and (max-width: 480px) {
@@ -442,18 +575,216 @@
 
 
 
-
-
-
-
-
-
+/*about开始*/
 
   #about-me {
       width: 100%;
       height: 100%;
-      background: blue;
+      background: #f7f7f5;
   }
+ #about-me .container{
+  /*background-color: yellow;*/
+  height: 100%;
+ }
+ #about-me .wrapper{
+    width: 750px;
+    margin: 60px auto;
+    /*background: gray;*/
+    height: 100%;
+    position: relative;
+   }
+  #head-s{
+    width: 230px;
+    height: 230px;
+    /*background-color: yellow;*/
+    float: left;
+    margin-top: 50px;
+    border-radius: 50%;
+    position: relative;
+  }
+  #head-s img{
+    width: 100%;
+    height: 100%;
+  }
+  #h-img{
+    width: 210px;
+    height: 210px;
+    /*background-color:blue;*/
+    position: absolute;
+    top: 0;
+    border-radius: 50%;
+    margin-left: 10px;
+    margin-top: 10px;
+    background: url(../img/headb.jpg);
+    background-size: 100% 100%;
+  }
+
+
+ 
+  
+  @media screen and (max-width: 480px) {
+     
+  }
+  #information{
+    width: 390px;
+    height: 240px;
+    /*background-color: red;*/
+    float: left;
+    margin-top: 50px;
+    margin-left: 70px;
+  }
+
+#information .title{
+  font-size: 17px;
+  color: #72c082;
+  line-height: 40px;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+}
+
+#information .contant{
+  font-size: 15px;
+  /*color: #7a7782;*/
+  color: #616f5b;
+  font-weight: bold;
+
+  letter-spacing: 1px;
+  text-indent: 2px;
+}
+ @media screen and (max-width: 768px) {
+    #about-me .wrapper{
+      width: 600px;
+      margin: 10px auto;
+     
+   }
+  #head-s{
+    width: 160px;
+    height: 160px;
+    
+  }
+  #h-img{
+    width: 140px;
+    height: 140px;
+
+    margin-left: 10px;
+    margin-top: 10px;
+   
+  }
+   #information{
+    width: 250px;
+    height: 150px;
+    margin-top: 30px;
+    margin-left: 80px;
+  }
+  #information .title{
+    font-size: 15px;
+    line-height: 30px;
+    letter-spacing: 1.5px;
+  }
+
+  #information .contant{
+    font-size: 14px;
+    /*color: #7a7782;*/
+
+    letter-spacing: 1px;
+    text-indent: 2px;
+  }
+
+
+  }
+#introduction{
+  width: 700px;
+  /*background: yellow;*/
+  height: 100px;
+  float: left;
+  margin-top: 10px;
+}
+
+#introduction p{
+  text-indent: 30px;
+  font-size: 15px;
+  color: #616f5b;
+  line-height: 23px;
+  /*font-weight: bold;*/
+
+}
+#interest{
+  float: left;
+  width: 100%;
+  height: 100px;
+  /*background: yellow;*/
+  margin-top: 6px;
+}
+#interest img{
+  width: 100px;
+  height: 100px;
+  margin: 0;
+  border: 0;
+  float: left;
+
+}
+#me{
+  position: absolute;
+  right: -40px;
+  top: 20px;
+}
+#position{
+  float: left;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+#position span{
+  font-size: 25px;
+  font-weight: bold;
+  color: #5f664d;
+  float: left;
+
+}
+#position #down{
+  float: left;
+  margin-left: 60px;
+
+}
+#position #download{
+  width: 170px;
+  height: 35px;
+  border-radius: 10px;
+  border: 1px #72c082 solid ;
+  /*float: left;*/
+  display: inline-block;
+  margin-left: 3px;
+  margin-right: 3px;
+}
+#position #download a{
+  display:inline-block;
+  width: 100%;
+  height: 100%;
+  color: #5f664d;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: center;
+
+}
+#position #down img{
+  width: 23px;
+  height: 20px;
+}
+#position #download:hover{
+  background: #72c082;
+ }
+#position #download a:hover{
+  color: white;
+  text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
    @media screen and (max-width: 768px) {
          #about-me {
           width: 100%;
@@ -463,6 +794,14 @@
 
    }
   
+/*about结束*/
+
+
+
+
+
+
+
   /*learn开始*/
   #learn {
     width: 100%;
@@ -480,7 +819,7 @@
   #time-line{
     /*width: 2000px;*/
     height: 100%;
-    background:#ccc;
+    /*background:#ccc;*/
     /*width: 10000px;*/
     display: inline-block;
     position: absolute;
@@ -494,7 +833,7 @@
 
 }
 .axle-up{
-    background: #ec6d5c;
+    background: #98ae6d;
 }
   #learn .axle{
     width: 200px;
@@ -524,7 +863,7 @@
      border-left:10px solid #9cc9a2;
   }
     #learn .axle.axle-up .arrow2{
-     border-left:10px solid  #ec6d5c;
+     border-left:10px solid  #98ae6d;
   }
     #learn .arrow2{
      left: 200px;
@@ -557,7 +896,7 @@
 
     }
      #time-line .axle.axle-up .line{
-        background: #ec6d5c;
+        background: #98ae6d;
         margin-top: -65px;
     }
    
@@ -575,7 +914,7 @@
      }
     #time-line .axle.axle-up .time{
         transform: translateX(-50%) translateY(100%);
-         color:#ec6d5c;
+         color:#98ae6d;
 
     }
      #time-line .axle .canvas{
@@ -610,7 +949,7 @@
      }
     #time-line .axle.axle-up .lesson{
         margin-top: -175px;
-        color:  #ec6d5c;
+        color:  #98ae6d;
 
 
 
@@ -647,7 +986,7 @@
   #project {
       width: 100%;
       height: 100%;
-      background: white;
+      background: #f7f7f5;
       position: relative;
   }
   #project .title{
@@ -739,19 +1078,27 @@
     color: #b2dd4c;
 
 }
+#project .mark1 .mark-left div{
+  width: 100%;
+  height: 35px;
+  margin-top: 5px;
+ 
+}
 
 #project .mark1 .mark-left h5{
-    width: 75px;
-    float: left;
-    margin-top:2px;
-    margin-left:30px;
-    font-size: 17px;
+  margin:0;
+  float:left;
+  display: inline-block;
+  margin-left: 15px;
+  margin-top: 1px;
+  font-size: 15px;
 }
 .project-mark .mark-left span{
-    /*float: right;*/
-    margin-left: 110px;
-    display: block;
-    line-height: 20px;
+  float: left;
+  display: inline-block;
+  width: 180px;
+
+   
 }
 #project .mark1 .mark-right span{
     font-size: 26px;
