--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,7 @@
       width: 100%;
       height: 100%;
       position: relative;
+      min-height: 648px;
   }
   
   #carousel {
@@ -494,6 +495,7 @@
       #home {
           width: 100%;
           height: 50%;
+          min-height:50%;
       }
       #carousel .li2 h1 {
           width: 30px;
@@ -580,6 +582,8 @@
   #about-me {
       width: 100%;
       height: 100%;
+      min-height: 648px;
+
       background: #f7f7f5;
   }
  #about-me .container{
@@ -622,9 +626,7 @@
 
  
   
-  @media screen and (max-width: 480px) {
-     
-  }
+ 
   #information{
     width: 390px;
     height: 240px;
@@ -651,47 +653,7 @@
   letter-spacing: 1px;
   text-indent: 2px;
 }
- @media screen and (max-width: 768px) {
-    #about-me .wrapper{
-      width: 600px;
-      margin: 10px auto;
-     
-   }
-  #head-s{
-    width: 160px;
-    height: 160px;
-    
-  }
-  #h-img{
-    width: 140px;
-    height: 140px;
 
-    margin-left: 10px;
-    margin-top: 10px;
-   
-  }
-   #information{
-    width: 250px;
-    height: 150px;
-    margin-top: 30px;
-    margin-left: 80px;
-  }
-  #information .title{
-    font-size: 15px;
-    line-height: 30px;
-    letter-spacing: 1.5px;
-  }
-
-  #information .contant{
-    font-size: 14px;
-    /*color: #7a7782;*/
-
-    letter-spacing: 1px;
-    text-indent: 2px;
-  }
-
-
-  }
 #introduction{
   width: 700px;
   /*background: yellow;*/
@@ -781,18 +743,57 @@
 
 
 
+    @media screen and (max-width: 768px) {
+  #about-me{
+       width: 100%;
+       height: 50%;
+       min-height:50%;
+  }
+       
 
-
-
-
-   @media screen and (max-width: 768px) {
-         #about-me {
-          width: 100%;
-          height: 50%;
-          /*background: blue;*/
-      }
-
+    #about-me .wrapper{
+      width: 600px;
+      margin: 10px auto;
+     
    }
+  #head-s{
+    width: 160px;
+    height: 160px;
+    
+  }
+  #h-img{
+    width: 140px;
+    height: 140px;
+
+    margin-left: 10px;
+    margin-top: 10px;
+   
+  }
+   #information{
+    width: 250px;
+    height: 150px;
+    margin-top: 30px;
+    margin-left: 80px;
+  }
+  #information .title{
+    font-size: 15px;
+    line-height: 30px;
+    letter-spacing: 1.5px;
+  }
+
+  #information .contant{
+    font-size: 14px;
+    /*color: #7a7782;*/
+
+    letter-spacing: 1px;
+    text-indent: 2px;
+  }
+
+
+  }
+   @media screen and (max-width: 480px) {
+     
+  }
   
 /*about结束*/
 
@@ -806,6 +807,7 @@
   #learn {
     width: 100%;
     height: 100%;
+    min-height: 648px;
     background:#deeee0;
     /*opacity: 0.2;*/
     /*overflow: hidden;*/
@@ -960,6 +962,7 @@
           #learn {
           width: 100%;
           height: 50%;
+           min-height:50%;
 
           /*background: blue;*/
       }
@@ -986,6 +989,7 @@
   #project {
       width: 100%;
       height: 100%;
+      min-height: 648px;
       background: #f7f7f5;
       position: relative;
   }
@@ -1130,6 +1134,7 @@
         #project {
           width: 100%;
           height: 50%;
+          min-height:50%;
       }
         #project .title{
             margin-top: 50px;
