--- a/css/index.css
+++ b/css/index.css
@@ -743,7 +743,7 @@
 
 
 
-    @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   #about-me{
        width: 100%;
        height: 50%;
@@ -771,7 +771,7 @@
   }
    #information{
     width: 250px;
-    height: 150px;
+    height: 180px;
     margin-top: 30px;
     margin-left: 80px;
   }
@@ -788,11 +788,143 @@
     letter-spacing: 1px;
     text-indent: 2px;
   }
-
+  #me{
+    width:70px;
+    height:150px;
+    }
+  #introduction{
+    width: 600px;
+    height: 80px;
+    margin-top: 10px;
+  }
+  #introduction p{
+    text-indent: 30px;
+    font-size: 12px;
+    /*color: #616f5b;*/
+    line-height: 20px;
+    /*font-weight: bold;*/
 
   }
-   @media screen and (max-width: 480px) {
+  #interest{
+    width: 100%;
+    height: 90px;
+    /*background: yellow;*/
+    margin-top: 10px;
+  }
+#interest img{
+  width: 85px;
+  height: 85px;
+  
+
+}
+
+}
+@media screen and (max-width: 480px) {
+   #about-me{
+       width: 100%;
+       height: 50%;
+       min-height:50%;
+  }
+       
+
+    #about-me .wrapper{
+      width: 320px;
+      margin: 15px auto;
      
+   }
+  #head-s{
+    width: 90px;
+    height: 90px;
+    
+  }
+  #h-img{
+    width: 80px;
+    height: 80px;
+
+    margin-left: 5px;
+    margin-top: 5px;
+   
+  }
+   #information{
+    width: 210px;
+    height: 115px;
+    margin-top: 30px;
+    margin-left: 10px;
+  }
+  #information .title{
+    font-size: 10px;
+    line-height: 10px;
+    letter-spacing: 1.5px;
+  }
+
+  #information .contant{
+    font-size: 10px;
+    /*color: #7a7782;*/
+
+    letter-spacing: 1px;
+    text-indent: 2px;
+  }
+  #me{
+    width:50px;
+    height:100px;
+    right: -10px;
+    top: 10px;
+    }
+  #introduction{
+   display: none;
+
+  }
+  #interest{
+    width: 100%;
+    height: 42px;
+    /*background: yellow;*/
+    margin-top: 10px;
+  }
+#interest img{
+  width: 45px;
+  height: 45px;
+}
+#position{
+  width: 300px;
+  margin: 30 auto;
+ /* margin-top:20px;
+  margin-left:50px;*/
+}
+#position span{
+  font-size: 10px;
+  /*margin: 0 auto;*/
+
+}
+#position span:first{
+    margin-left: 20px;
+}
+
+#position #down{
+  margin-left: 0px;
+  margin-top: 15px;
+
+}
+#position #download{
+  width: 180px;
+  height:25px;
+  /*border-radius: 10px;*/
+  border: 1px #72c082 solid ;
+  /*float: left;*/
+  /*display: inline-block;*/
+  margin-left: 3px;
+  margin-right: 3px;
+}
+#position #download a{
+ 
+  line-height: 25px;
+  text-align: center;
+  font-size: 5px;
+
+}
+#position #down img{
+  width: 13px;
+  height: 10px;
+}
   }
   
 /*about结束*/
@@ -966,6 +1098,66 @@
 
           /*background: blue;*/
       }
+
+   }
+
+     @media screen and (max-width: 480px) {
+          #learn {
+          width: 100%;
+          height: 50%;
+           min-height:50%;
+
+          /*background: blue;*/
+      }
+      #time-line .axle .line{
+        width: 3px;
+        height: 45px;
+        position: absolute;
+        left: 50%;
+        margin-left:-1px;
+    }
+ /*    #time-line .axle.axle-down .line{
+        margin-top: 20px;
+        background: #9cc9a2;
+
+    }*/
+     #time-line .axle.axle-up .line{
+        margin-top: -45px;
+    }
+   
+     #time-line .axle .time{
+        position: absolute;
+        margin: 0;
+        left: 50%;
+        font-weight: 700;
+        font-size: 30px;
+     }
+
+    #time-line .axle.axle-down .canvas{
+        margin-top: 62px;
+
+     }
+    #time-line .axle.axle-up .canvas{
+        margin-top: -123px;
+
+
+    }
+     #learn .axle .lesson{
+     
+        font-size: 22px;
+      
+        /*letter-spacing:0px;*/
+     }
+      #time-line .axle.axle-down .lesson{
+        margin-top: 143px;
+
+     }
+    #time-line .axle.axle-up .lesson{
+        margin-top: -150px;
+
+
+
+    }
 
    }
 
@@ -1169,6 +1361,10 @@
             /*padding:0 10px 20px 10px;*/
             /*position: relative;*/
 
+        }
+          #title-project{
+          top:20px;
+          left: 10%;
         }
      
         .mark2{
