--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,6 @@
   * {
       padding: 0;
       margin: 0;
-      /*transition: all 0.3s linear;*/
   }
   /*nav开始*/
   
@@ -105,7 +104,6 @@
   }
   
   #nav .list a:focus {
-      background: transparent;
 
   }
   @media screen and (max-width: 1200px) {
@@ -455,7 +453,6 @@
       line-height: 65px;
       position: absolute;
       top: 50%;
-      /*display: none;*/
       opacity: 0;
       filter: opacity(0);
       -webkit-transition: all 0.8s ease 0.1s;
@@ -583,24 +580,20 @@
       width: 100%;
       height: 100%;
       min-height: 648px;
-
       background: #f7f7f5;
   }
  #about-me .container{
-  /*background-color: yellow;*/
   height: 100%;
  }
  #about-me .wrapper{
     width: 750px;
     margin: 60px auto;
-    /*background: gray;*/
     height: 100%;
     position: relative;
    }
   #head-s{
     width: 230px;
     height: 230px;
-    /*background-color: yellow;*/
     float: left;
     margin-top: 50px;
     border-radius: 50%;
@@ -613,7 +606,6 @@
   #h-img{
     width: 210px;
     height: 210px;
-    /*background-color:blue;*/
     position: absolute;
     top: 0;
     border-radius: 50%;
@@ -630,7 +622,6 @@
   #information{
     width: 390px;
     height: 240px;
-    /*background-color: red;*/
     float: left;
     margin-top: 50px;
     margin-left: 70px;
@@ -646,7 +637,6 @@
 
 #information .contant{
   font-size: 15px;
-  /*color: #7a7782;*/
   color: #616f5b;
   font-weight: bold;
 
@@ -656,7 +646,6 @@
 
 #introduction{
   width: 700px;
-  /*background: yellow;*/
   height: 100px;
   float: left;
   margin-top: 10px;
@@ -667,14 +656,12 @@
   font-size: 15px;
   color: #616f5b;
   line-height: 23px;
-  /*font-weight: bold;*/
 
 }
 #interest{
   float: left;
   width: 100%;
   height: 100px;
-  /*background: yellow;*/
   margin-top: 6px;
 }
 #interest img{
@@ -783,8 +770,6 @@
 
   #information .contant{
     font-size: 14px;
-    /*color: #7a7782;*/
-
     letter-spacing: 1px;
     text-indent: 2px;
   }
@@ -800,15 +785,12 @@
   #introduction p{
     text-indent: 30px;
     font-size: 12px;
-    /*color: #616f5b;*/
     line-height: 20px;
-    /*font-weight: bold;*/
 
   }
   #interest{
     width: 100%;
     height: 90px;
-    /*background: yellow;*/
     margin-top: 10px;
   }
 #interest img{
@@ -822,7 +804,7 @@
 @media screen and (max-width: 480px) {
    #about-me{
        width: 100%;
-       height: 50%;
+       height:350px;
        min-height:50%;
   }
        
@@ -840,7 +822,6 @@
   #h-img{
     width: 80px;
     height: 80px;
-
     margin-left: 5px;
     margin-top: 5px;
    
@@ -859,8 +840,6 @@
 
   #information .contant{
     font-size: 10px;
-    /*color: #7a7782;*/
-
     letter-spacing: 1px;
     text-indent: 2px;
   }
@@ -877,7 +856,6 @@
   #interest{
     width: 100%;
     height: 42px;
-    /*background: yellow;*/
     margin-top: 10px;
   }
 #interest img{
@@ -887,12 +865,9 @@
 #position{
   width: 300px;
   margin: 30 auto;
- /* margin-top:20px;
-  margin-left:50px;*/
 }
 #position span{
   font-size: 10px;
-  /*margin: 0 auto;*/
 
 }
 #position span:first{
@@ -907,10 +882,7 @@
 #position #download{
   width: 180px;
   height:25px;
-  /*border-radius: 10px;*/
   border: 1px #72c082 solid ;
-  /*float: left;*/
-  /*display: inline-block;*/
   margin-left: 3px;
   margin-right: 3px;
 }
@@ -941,8 +913,6 @@
     height: 100%;
     min-height: 648px;
     background:#deeee0;
-    /*opacity: 0.2;*/
-    /*overflow: hidden;*/
     position: relative;
   }
     #learn .container{
@@ -951,16 +921,11 @@
          position: relative;
     }
   #time-line{
-    /*width: 2000px;*/
     height: 100%;
-    /*background:#ccc;*/
-    /*width: 10000px;*/
     display: inline-block;
     position: absolute;
     right:3px;
-    /*transition: all 0s linear 0s;*/
-    /*right:10px;*/
-    /*overflow: hidden;*/
+ 
   }
 .axle-down{
     background: #9cc9a2;
@@ -975,7 +940,6 @@
     position: relative;
     top:50%;
     display: inline-block;
-    /*float: left;*/
     margin-right:5px;
      float: right;
 
@@ -1014,7 +978,6 @@
     top: 50%;
     margin-left: -3px;
     margin-top: -3px;
-    /*line-height: 20px;*/
   }
  
     #time-line .axle .line{
@@ -1055,7 +1018,6 @@
         position: absolute;
         left: 50%;
         margin-left: -40px;
-        /*background: red;*/
      }
     #time-line .axle.axle-down .canvas{
         margin-top: 82px;
@@ -1068,13 +1030,11 @@
     }
      #learn .axle .lesson{
         position: absolute;
-        /*top:0;*/
          margin: 0;
         left: 50%;
         transform: translateX(-50%) ;
         font-size: 32px;
         font-weight: 700;
-        /*letter-spacing:0px;*/
      }
       #time-line .axle.axle-down .lesson{
         margin-top: 170px;
@@ -1095,8 +1055,6 @@
           width: 100%;
           height: 50%;
            min-height:50%;
-
-          /*background: blue;*/
       }
 
    }
@@ -1104,10 +1062,7 @@
      @media screen and (max-width: 480px) {
           #learn {
           width: 100%;
-          height: 50%;
-           min-height:50%;
-
-          /*background: blue;*/
+          height: 400px;
       }
       #time-line .axle .line{
         width: 3px;
@@ -1116,11 +1071,7 @@
         left: 50%;
         margin-left:-1px;
     }
- /*    #time-line .axle.axle-down .line{
-        margin-top: 20px;
-        background: #9cc9a2;
 
-    }*/
      #time-line .axle.axle-up .line{
         margin-top: -45px;
     }
@@ -1143,10 +1094,7 @@
 
     }
      #learn .axle .lesson{
-     
         font-size: 22px;
-      
-        /*letter-spacing:0px;*/
      }
       #time-line .axle.axle-down .lesson{
         margin-top: 143px;
@@ -1191,7 +1139,6 @@
     font-weight: 700;
     margin-top: 103px;
     font-family: 'title';
-    /*display: block;*/
   }
 #project .container>p{
     text-align: center;
@@ -1211,12 +1158,10 @@
     left: 37%;
   }
   #project .container{
-    /*background: red;*/
     height: 100%;
   }
 #project .project{
     height: 35%;
-    /*background: yellow;*/
     padding:0 20px 40px 20px;
     position: relative;
 
@@ -1228,8 +1173,6 @@
     width: 100%;
     height: 100%;
     cursor: pointer;
-    /*display: inline-block;*/
-    /*position: absolute;*/
 }
 #project .project .project-mark{
    
@@ -1245,10 +1188,7 @@
 }
 
 #project .project .mark1{
-    /*top: 500px;*/
-  
     transition: all 0.5s ease;
-
 }
 
 .project-mark .mark-right{
@@ -1302,10 +1242,8 @@
 }
 .mark2{
    
-    /*width: 100%;*/
     height: 45px;
 
-    /*transition: all 0.2s ease;*/
 
 }
 #project .mark2 .mark-left h2{
@@ -1327,15 +1265,12 @@
           width: 100%;
           height: 50%;
           min-height:50%;
-      }
+       }
         #project .title{
             margin-top: 50px;
         }
          #project .project{
-              /*height: 190px;*/
-            /*background: yellow;*/
             padding:0 10px 20px 10px;
-            /*position: relative;*/
 
         }
         #project .project .project-mark{
@@ -1357,10 +1292,7 @@
         }
         #project .project{
               height: 180px;
-            /*background: yellow;*/
-            /*padding:0 10px 20px 10px;*/
-            /*position: relative;*/
-
+           
         }
           #title-project{
           top:20px;
@@ -1368,12 +1300,7 @@
         }
      
         .mark2{
-   
-            /*width: 100%;*/
             height: 40px;
-
-            /*transition: all 0.2s ease;*/
-
         }
          #project .mark2 .mark-right{
             width: 30%;
@@ -1383,18 +1310,15 @@
           }
         #project .mark2 .mark-left h2{
             font-size: 16px;
-            /*margin-top: 10px;*/
         }
         #project .mark2 .mark-right span{
             font-size: 20px;
             line-height: 40px;
-            /*transition: all 0.3s ease-in-out;*/
 
         }
     }
       @media screen and (max-width: 320px) {
          #project {
-            /*width: 100%;*/
             height: 600px;
         }
          #project .mark2 .mark-left h2{
